--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,4 @@ INFURA_PROJECT_SECRET=
 
 #IPFS_GATEWAY_URL="https://dweb.link/ipfs/"
 
-IPFS_GATEWAY_URL="https://moneyviz-notarify.infura-ipfs.io/ipfs/"
+IPFS_GATEWAY_URL="https://<your infura gateway>.infura-ipfs.io/ipfs/"
