fix README and ENV.SAMPLE

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,11 @@
 
 
-INFURA_PROJECT_ID=
-INFURA_PROJECT_SECRET=
+# INFURA_PROJECT_ID="" DEPRECATED
+# INFURA_PROJECT_SECRET="" DEPRECATED
 
-#IPFS_GATEWAY_URL="https://dweb.link/ipfs/"
+IPFS_GATEWAY_URL="https://<YOUR PINATA SUBDOMAIN HERE>.mypinata.cloud/ipfs/"
 
-IPFS_GATEWAY_URL="https://<your infura gateway>.infura-ipfs.io/ipfs/"
+IPFS_PINATA_GATEWAY_TOKEN="?pinataGatewayToken=<YOUR TOKEN HERE>"
+
+PINATA_SECRET_KEY="<YOUR API SECRET KEY HERE>"
+
